fixed portfolio page so that there was no longer a horizontal scroll

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -17,6 +17,7 @@
   letter-spacing: .5em;
   font-size:4vw;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .desc {
@@ -28,6 +29,9 @@
 }
 .btn {
   margin-left: 200px;
+}
+.about {
+  margin-right: 40px;
 }
 /* about section ends here */
 
@@ -61,7 +65,7 @@ form {
   }
   
 .wrapper img {
-    width: 33%;
+    width: 33.3%;
     padding: 5px;
   }
 /*portfolio section ends here*/
